force-app/main/default/objects/PricebookEntry/fields/ARC_Sage_Item_Heading_title__c.field-meta.xml
<CustomField>
    <fullName>ARC_Sage_Item_Heading_title__c</fullName>
    <formula>Product2.ARC_Sage_Item_Heading_title__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Item Heading</label>
    <type>Text</type>
</CustomField>