force-app/main/default/objects/PricebookEntry/fields/Item_Description__c.field-meta.xml
<CustomField>
    <fullName>Item_Description__c</fullName>
    <formula>Product2.Description</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Item Description</label>
    <type>Text</type>
</CustomField>