force-app/main/default/objects/PricebookEntry/fields/ItemKey__c.field-meta.xml
<CustomField>
    <fullName>ItemKey__c</fullName>
    <description>This is the external product key from our ERP system and it is used as an external key for updates to products</description>
    <externalId>true</externalId>
    <label>ItemKey</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>