force-app/main/default/objects/PricebookEntry/fields/Kit_Components__c.field-meta.xml
<CustomField>
    <fullName>Kit_Components__c</fullName>
    <formula>Product2.Kit_Components__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Kit Components</label>
    <type>Text</type>
</CustomField>