force-app/main/default/objects/PricebookEntry/fields/Sandbox_Pricebookentry_id__c.field-meta.xml
<CustomField>
    <fullName>Sandbox_Pricebookentry_id__c</fullName>
    <label>Sandbox Pricebook entry id</label>
    <length>32</length>
    <type>Text</type>
</CustomField>