force-app/main/default/objects/PricebookEntry/fields/Sandbox_Product_ID__c.field-meta.xml
<CustomField>
    <fullName>Sandbox_Product_ID__c</fullName>
    <label>Sandbox Product ID</label>
    <length>32</length>
    <type>Text</type>
</CustomField>